fetched data from api and displayed on required pages

--- a/src/styles/quasar.variables.scss
+++ b/src/styles/quasar.variables.scss
@@ -2,7 +2,7 @@
 // to match your app's branding.
 
 $primary   : #027BE3;
-$secondary : #26A69A;
+$secondary : #e8eaf6;
 $accent    : linear-gradient(352deg, #f17575, #cd406d14);
 
 $dark      : #1D1D1D;
@@ -13,3 +13,4 @@ $info      : #31CCEC;
 $warning   : #F2C037;
 
 @import '~quasar-variables-styl'
+
